--- a/boards/shields/meteorite40/meteorite40.dtsi
+++ b/boards/shields/meteorite40/meteorite40.dtsi
@@ -17,8 +17,11 @@
 #define HALF_INPUT 50           // r=|x|/xs の xs（counts）。既定 50
 #define EXPONENT_TENTHS 12      // 指数 p を 0.1 分解能で指定（p*10、例: 15 は p=1.5）。既定 10（p=1.0）
 
-#define POLL_PERIOD_MS 10       // キースキャンのポーリング周期（ms）
+#define POLL_PERIOD_MS 1       // キースキャンのポーリング周期（ms）
 #define DEBOUNCE_MS 10           // デバウンス時間 (ms)
+
+#define DEBOUNCE_PRESS_MS 0
+#define DEBOUNCE_RELEASE_MS 5
 
 &spi0 {
     status = "okay";
@@ -75,8 +78,8 @@
                 <&gpio1 11 GPIO_ACTIVE_HIGH>; // ID6: P1.11
 
         interrupt-gpios = <&gpio0 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>; // Changed to P0.09 (NFC1)
-        debounce-press-ms = <DEBOUNCE_MS>;
-        debounce-release-ms = <DEBOUNCE_MS>;
+        debounce-press-ms = <DEBOUNCE_PRESS_MS>;
+        debounce-release-ms = <DEBOUNCE_RELEASE_MS>;
         poll-period-ms = <POLL_PERIOD_MS>;
         wakeup-source;
     };
