--- a/boards/shields/meteorite40/meteorite40.dtsi
+++ b/boards/shields/meteorite40/meteorite40.dtsi
@@ -19,6 +19,8 @@
 
 #define POLL_PERIOD_MS 5       // キースキャンのポーリング周期（ms）
 #define DEBOUNCE_MS 10           // デバウンス時間 (ms)
+#define DEBOUNCE_PRESS_MS 10
+#define DEBOUNCE_RELEASE_MS 10
 
 &spi0 {
     status = "okay";
